# Magicsound

./: bot.py  main.py  pyproject.toml
